[package]
name = "pi_slotmap"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Slotmap data structure"
repository = "https://github.com/GaiaWorld/pi_slotmap.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "slotmap", "slab"]
readme = "README.md"
categories = ["data-structures", "memory-management", "caching"]

[features]
default = ["std"]
unstable = []
std = []

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
fxhash = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quickcheck = "0.9"

[build-dependencies]
version_check = "0.9"
