[package]
name = "pi_slotmap"
version = "0.1.12"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Slotmap data structure"
repository = "https://github.com/GaiaWorld/pi_slotmap.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "slotmap", "slab"]
readme = "README.md"
categories = ["data-structures", "memory-management", "caching"]

[features]
default = ["std"]
unstable = []
std = []
serde = ["pi_key_alloter/serde"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
pi_null = "0.1"
pi_key_alloter = "0.4"

[dev-dependencies]
fxhash = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quickcheck = "0.9"

[build-dependencies]
version_check = "0.9"
